Removed unwanted contents added title.

--- a/index.html
+++ b/index.html
@@ -41,10 +41,7 @@
   
 
     <div class="container">
-        <br><br><br>
-        <h1>Bootstrap Starter Template</h1>
-        <p class="lead">Use this document as a way to quickly start any new project.
-            <br> All you get is this text and a mostly barebones HTML document.</p>
+		<h1>Time wheel</h1>
     <p class="datetimedisp"></p>
 		
 		<p class="hou"></p>
