Added hour instead of degree

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Time Wheel</title>
-
+<link rel="icon" type="image/x-icon" href="favicon.ico">
     <!-- Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -115,7 +116,7 @@
 			
 			 // Alert between a hour gap
 			if ( degreeHour == degree ) {
-							alert("it's " + degreeHour + " o'clock");
+							alert("it's " + hours + " o'clock");
  			}
 			
 			setTimeout("diplaytime()",1000);
