--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
 			 // Alert between a hour gap
 			if ( degreeHour == degree ) {
-							alert("it's " + hours + " o'clock");
+//							alert("it's " + hours + " o'clock");
  			}
 			
 			setTimeout("diplaytime()",1000);
