Added audio and some code improvements.

--- a/index.html
+++ b/index.html
@@ -41,36 +41,55 @@
                 <span class="scene"></span>
         </div>
     <div class="dayNight">
+        <!-- Waves -->
+     
+       <div class="waves">
+           <div class="d">
+        <img class="img-responsive w dy" src="assets/img/waves-day.png">
+        <img class="img-responsive w dy" src="assets/img/waves-day.png">
+               </div>
+             <div class="n">
+        <img class="img-responsive w ni" src="assets/img/waves-night.png">
+        <img class="img-responsive w ni" src="assets/img/waves-night.png">
+        </div>
+        </div>
+        
 <!--		Star Starts		-->
-		<img class="star blink" src="assets/img/star.png">
-		<img class="star" src="assets/img/star.png">
-		<img class="star blink" src="assets/img/star.png">
-		<img class="star" src="assets/img/star.png">
-		<img class="star blink" src="assets/img/star.png">
-		<img class="star blink" src="assets/img/star.png">
-		<img class="star" src="assets/img/star.png">
-		<img class="star" src="assets/img/star.png">
-		<img class="star blink" src="assets/img/star.png">
-		<img class="star blink" src="assets/img/star.png">
-		<img class="star" src="assets/img/star.png">
-		<img class="star blink" src="assets/img/star.png">
-		<img class="star blink" src="assets/img/star.png">
-		<img class="star" src="assets/img/star.png">
-		<img class="star" src="assets/img/star.png">
-		<img class="star " src="assets/img/star.png">
-		<img class="star" src="assets/img/star.png">
-		<img class="star blink" src="assets/img/star.png">
-		<img class="star" src="assets/img/star.png">
-		<img class="star blink" src="assets/img/star.png">
+        <div class="star n">
+		<img class="s blink" src="assets/img/star.png">
+		<img class="s" src="assets/img/star.png">
+		<img class="s blink" src="assets/img/star.png">
+		<img class="s" src="assets/img/star.png">
+		<img class="s blink" src="assets/img/star.png">
+		<img class="s blink" src="assets/img/star.png">
+		<img class="s" src="assets/img/star.png">
+		<img class="s" src="assets/img/star.png">
+		<img class="s blink" src="assets/img/star.png">
+		<img class="s blink" src="assets/img/star.png">
+		<img class="s" src="assets/img/star.png">
+		<img class="s blink" src="assets/img/star.png">
+		<img class="s blink" src="assets/img/star.png">
+		<img class="s" src="assets/img/star.png">
+		<img class="s" src="assets/img/star.png">
+		<img class="s " src="assets/img/star.png">
+		<img class="s" src="assets/img/star.png">
+		<img class="s blink" src="assets/img/star.png">
+		<img class="s" src="assets/img/star.png">
+		<img class="s blink" src="assets/img/star.png">
+            </div>
 		<!--		Star Starts Ends		-->
 
-        <img class="img-responsive night-img" src="assets/img/night.png">
-        <img class="img-responsive day-img" src="assets/img/Morning.png">
+        <div class="clock">
+        <img class="img-responsive night-img n" src="assets/img/night.png">
+        <img class="img-responsive day-img de" src="assets/img/Morning.png">
         <img class="img-responsive moon" id="moon" src="assets/img/moon.png">
         <img class="img-responsive sun" src="assets/img/sun.png">
-
+</div>
         </div>
     </div>
+    <audio autoplay loop>
+  <source src="assets/audio/t.mp3" type="audio/mpeg">
+</audio>
     <!-- /.container -->
 
 
