--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
 </head>
 
 <body class="body">
-
+<audio id="player" preload="auto">
+    <source src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/191814/elvispresleyfallinginlove).mp3">
+        Your browser does not support the audio element.
+    </audio>
   <div class="overlay"></div>
 
     <div class="container">
@@ -87,9 +90,11 @@
 </div>
         </div>
     </div>
+<!--
     <audio id="myAudio">
   <source src="assets/audio/t.mp3" type="audio/mpeg">
 </audio>
+-->
     <!-- /.container -->
 
 
@@ -248,7 +253,7 @@
 			setTimeout("diplaytime()",1000);
 		}
         
-        var aud = document.getElementById("myAudio"); 
+        var aud = document.getElementById("player"); 
 
 function playAud() { 
     aud.play();
