some alignment changes

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
 	<footer>
 	<div class="container">
 		<div class="row">
-		<div class="col-sm-4">&copy; 2017 satheesh kumar</div>
+		<div class="col-sm-4 text-center-xs">&copy; 2017 satheesh kumar</div>
 		<div class="col-sm-4 text-center"><img src="assets/img/Logo.png" height="25px"></div>
-			<div class="col-sm-4 text-right">	<a href="" class="linkedin"><i class="fa fa-linkedin"></i></a>
+			<div class="col-sm-4 text-right-sm text-center-xs">	<a href="" class="linkedin"><i class="fa fa-linkedin"></i></a>
 			<a href="" class="instagram"><i class="fa fa-instagram"></i></a>
 			<a href="" class="twitter"><i class="fa fa-twitter"></i></a>
 			<a href="" class="dribbble"><i class="fa fa-dribbble"></i></a></div>
