Added social accounts.

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
             <img class="img-responsive" src="assets/img/Logo.png" height="75px" width="75px">
 			<h1>Time wheel</h1>
 			<h4>Satheesh Kumar</h4>
-			<a href="" class="linkedin"><i class="fa fa-linkedin"></i></a>
-			<a href="" class="instagram"><i class="fa fa-instagram"></i></a>
-			<a href="" class="twitter"><i class="fa fa-twitter"></i></a>
-			<a href="" class="dribbble"><i class="fa fa-dribbble"></i></a>
+						<a href="https://dribbble.com/satheesh_design" target="_blank" class="dribbble"><i class="fa fa-dribbble"></i></a>
+			<a href="https://www.linkedin.com/in/satheeshdesign" target="_blank" class="linkedin"><i class="fa fa-linkedin"></i></a>
+			<a href="https://www.instagram.com/satheesh_design/" target="_blank" class="instagram"><i class="fa fa-instagram"></i></a>
+			<a href="https://twitter.com/satheesh_design/" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a>
         </div>
 <!--		<h1>Time wheel</h1>-->
 <!--    <p class="datetimedisp"></p>-->
@@ -120,10 +120,12 @@
 		<div class="row">
 		<div class="col-sm-4 text-center-xs">&copy; 2017 satheesh kumar</div>
 		<div class="col-sm-4 text-center"><img src="assets/img/Logo.png" height="25px"></div>
-			<div class="col-sm-4 text-right-sm text-center-xs">	<a href="" class="linkedin"><i class="fa fa-linkedin"></i></a>
-			<a href="" class="instagram"><i class="fa fa-instagram"></i></a>
-			<a href="" class="twitter"><i class="fa fa-twitter"></i></a>
-			<a href="" class="dribbble"><i class="fa fa-dribbble"></i></a></div>
+			<div class="col-sm-4 text-right-sm text-center-xs">	
+					<a href="https://dribbble.com/satheesh_design" target="_blank" class="dribbble"><i class="fa fa-dribbble"></i></a>
+			<a href="https://www.linkedin.com/in/satheeshdesign" target="_blank" class="linkedin"><i class="fa fa-linkedin"></i></a>
+			<a href="https://www.instagram.com/satheesh_design/" target="_blank" class="instagram"><i class="fa fa-instagram"></i></a>
+			<a href="https://twitter.com/satheesh_design/" target="_blank" class="twitter"><i class="fa fa-twitter"></i></a>
+			</div>
 		</div>
 	</div>
 	</footer>
