--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 	<footer>
 	<div class="container">
 		<div class="row">
-		<div class="col-sm-4 text-center-xs">&copy; 2017 satheesh kumar</div>
+		<div class="col-sm-4 text-center-xs">&copy; 2017 Satheesh Kumar S</div>
 		<div class="col-sm-4 text-center"><img src="assets/img/Logo.png" height="25px"></div>
 			<div class="col-sm-4 text-right-sm text-center-xs">	
 					<a href="https://dribbble.com/satheesh_design" target="_blank" class="dribbble"><i class="fa fa-dribbble"></i></a>
